# openusage

./: .gitignore  package.json
.github/workflows/: publish.yml
docs/: breadcrumbs.md  choices.md
docs/plugins/: api.md  schema.md
docs/specs/: 2026-02-02-line-scope.md  tauri-updater-publish.md
plugins/: test-helpers.js
plugins/claude/: plugin.js  plugin.json
plugins/codex/: plugin.js  plugin.json
plugins/copilot/: plugin.js  plugin.json  plugin.test.js
plugins/cursor/: plugin.js  plugin.json
plugins/mock/: plugin.js  plugin.json
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  panel.rs  tray.rs
src-tauri/src/plugin_engine/: host_api.rs  manifest.rs
src/components/: panel-footer.test.tsx  panel-footer.tsx  plugin-error.tsx  provider-card.test.tsx  provider-card.tsx  skeleton-lines.test.tsx  skeleton-lines.tsx
src/components/ui/: alert.tsx  checkbox.tsx
src/hooks/: use-app-update.test.ts  use-app-update.ts  use-probe-events.ts
src/lib/: plugin-types.ts  settings.test.ts  settings.ts
src/pages/: overview.test.tsx  overview.tsx  provider-detail.tsx  settings.test.tsx  settings.tsx
src/test/: setup.ts
